[gd_scene load_steps=8 format=2]

[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://sqlDataDebugger.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.513726, 0.00392157, 0.509804, 1 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.282353, 0, 0.45098, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]

[node name="sqlDataDebugger" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -504, -32 )
script = ExtResource( 2 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="buttons" type="Node" parent="."]

[node name="buttonShowTable" type="Button" parent="buttons"]
margin_left = 64.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 192.0
text = "Show Table"

[node name="buttonDeleteTable" type="Button" parent="buttons"]
margin_left = 224.0
margin_top = 224.0
margin_right = 352.0
margin_bottom = 288.0
text = "Delete Table"

[node name="buttonAddRow" type="Button" parent="buttons"]
margin_left = 64.0
margin_top = 320.0
margin_right = 192.0
margin_bottom = 384.0
text = "Add Row"

[node name="buttonDeleteRow" type="Button" parent="buttons"]
margin_left = 224.0
margin_top = 320.0
margin_right = 352.0
margin_bottom = 384.0
text = "Delete Row"

[node name="buttonAddTable" type="Button" parent="buttons"]
margin_left = 64.0
margin_top = 224.0
margin_right = 192.0
margin_bottom = 288.0
text = "Add Table"

[node name="labels" type="Node" parent="."]

[node name="TextStudentHub" type="Label" parent="labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -464.0
margin_top = 32.0
margin_right = 480.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "SQL File Debugger"
align = 1

[node name="TextUsernameTextbox" type="Label" parent="labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 184.0
margin_right = 64.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 4 )
text = "Username:"
align = 1

[node name="TextTableTextbox" type="Label" parent="labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 280.0
margin_right = 64.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 4 )
text = "Table Name:"
align = 1

[node name="TextPasswordTextbox" type="Label" parent="labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 376.0
margin_right = 64.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 4 )
text = "Password:"
align = 1

[node name="TextClassCode" type="Label" parent="labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 472.0
margin_right = 64.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 4 )
text = "ClassCode:"
align = 1

[node name="TextSQLResults" type="Label" parent="labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 136.0
margin_top = 128.0
margin_right = 472.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Placeholder"
align = 1
valign = 1
autowrap = true

[node name="textfields" type="Node" parent="."]

[node name="textboxUsername" type="LineEdit" parent="textfields"]
margin_left = 384.0
margin_top = 216.0
margin_right = 576.0
margin_bottom = 256.0

[node name="textboxTable" type="LineEdit" parent="textfields"]
margin_left = 384.0
margin_top = 312.0
margin_right = 576.0
margin_bottom = 352.0

[node name="textboxPassword" type="LineEdit" parent="textfields"]
margin_left = 384.0
margin_top = 408.0
margin_right = 576.0
margin_bottom = 448.0

[node name="textboxClasscode" type="LineEdit" parent="textfields"]
margin_left = 384.0
margin_top = 504.0
margin_right = 576.0
margin_bottom = 544.0

[connection signal="pressed" from="buttons/buttonShowTable" to="." method="_on_buttonShowTable_pressed"]
[connection signal="pressed" from="buttons/buttonAddRow" to="." method="_on_buttonAddRow_pressed"]
